--- a/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
@@ -3417,33 +3417,33 @@
   <data name="TaskBarDropdownMiFix.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX4SURBVGhD7ZhtTFtVGMfRqB80UbMYNX7RxGR+ccaoc980
-        8etMjB+WzI29CKwbUCh9pRTqbXtLW6ACQ8ZW2tGWlr63tJTyvnXDzY3gnBNGGIMNmEYde8nMtmzTcb1P
-        PHcp7BTa3sI6s1/yT7inz3me519u7znnZj1hCXItZe8JvbqLsmD1VKxgbFdLxToUlvkUO0mjezRI9U0f
-        WiDXSJDiO8n9KCzz4bvVY4tNgHqnByi+RzOCwjKbrwyCV4juhss4IyBFpH6OYyh9CYVnLoUORVHToHke
-        ZwLUEDXN89zqHBSeufA9lUd7Lg5gTYC6pvoogaeyH4VnHpKgbrPYrz2rj5pu4QzEiug5cFsS0I3IwtVf
-        oumrw3aL6O1NHuI5dLkAnpN4S+ivHFVF6//pPN+DbRyn8PluqubQgfuSgPaMOFj1Bkq3AKgJtdElOzYb
-        y14T+SrnlF36W7AWSNur+2Qd3xbnuvlrRL7qfCJYczkZA4sVmuimFKH6qxUd+rxcI3+N2KPNE/q0YbrO
-        mDK092qJh7gGPaB2UqfYrepoH+98UBi+yYPDTooYaLrTEG28G9tUqoLHsrrTdI8Y2H/HPOyiYr8Y72iI
-        4jrJCGonNfa0Eu9W9jTMxRZ9FKIf2dfzzLL3UVvJw3WRJyOTvdjkq6kO+vYrdimHUVvJkW+Tb9RFm2/g
-        Ej8K6Q833dxtl3+B2kucPKus1jjUdgmXNBH5x8JUbb/xGtFZNwuq7TddgzFcbCKqj5r+3GUpr0PtJQ5B
-        EE9/bS6zGIZbZ3GJ4wl+qOUB3a8FdoVtu1HycXar8AUQ/F3oUNrhs2Sfco0nWq/mWCsc0BNqLzmSNQP3
-        Ms9FTuRZpWtRiofIMVW8AzEQi8uxWM1R+w2OVe5O2QRDMmZEfu30FpPwTTQ1LhAj8JEzuByxok3c2t0m
-        97M2wQCJCmzET7hijBqPmu5ybIQMTVmWPXZ5RePRg0uuQ/k2YjJtJhj4TtVpXDFGsoB+Zqut6EUUviyw
-        lS+n5+ByMVqRs4vIox3BFWMk9Kh/RqEJw/dpzuByMeL7NRMoNH3Q+61fcMUYlXjVP6LQhKG386dwuRjx
-        XJXTKDR9CH1VQ7hijAQ+zTgKTQwq6ymJXzOOy8WoxKG+gKLTB89DHsEVY1RzyHAlxyT7CIUvy84W6fqa
-        w4YruFyMuC5iDIWnh5026XpBoGrJHyasC1yH4ns0ZVnyHcQx2EnjcjHit5EzW1vEH6Ap7AATEq9utvtC
-        P7ZYrPbRe7M9NkUVmhqXfDtR/d1x61+4HLGKTPbR/xVyirWZZEww2ju4/3pBmyKU3SR8FaV5AByQ6PWo
-        A2Jwc3FibSYVE4zMQ4758rB+hutUnSy0K9wg+BvGLEPOuG9Y4omVGU5r+b6DJ9pZnwDD9AYRhPssGdlO
-        +6hCxzdm1F7i7DDzXhYHdEsugqspkVf7B5zpUXvJwbFUlDafcj3yw5Up6rjPc6m0qK3k4Rg4z9L39um+
-        iw8n75rqpSK0Fo+nKsgFORePw8u+Ird6FnpBbaVGrlm6CU5ngfFOquG4eU4e1o8LnOQP9JOprdhNDrpH
-        /TcXF09W8OZe7NVMinyaLplfd1bV3TBXO2CYD45HqL3RxrtFblV6XrHussmtu1vl1dnNpZ/BaQ8N/7e9
-        dyo1uoEDs/AqFNfkUoI5yh7DbaFf6/qUIJ5Baek7gXie61BuFHo11iIXGULDK88Oi/TDQrvyuLq37vfQ
-        uS5s07GCGKJDf0/gJc+LvVWfozSZw7Zm6VqRT73kAQzEd6kv0d/2BjQtfewwi16Hxy26ZEWRU6kPnotg
-        DYDa6fte6NPaUTgroGfoHV1mZW03So5sM4oV6JIVO1sk6/SDzXF3tZrulnsFduITFM4K6Bl6R5fpNQLI
-        gvq4C2mpV/1bus7hK24EXnzj9miwVtDn8GMojDUrbiTXUpatCzb93XTMQsVK07ePKnaruSiMNStuBNYa
-        +oy/Rdyu2bZAwaqtsesQW1bcyGrxxEim8cRIpoE1wph5nMT0jWyAM0k9M/i4CXpHNv4PZGX9C8V8Dw6b
-        MCbzAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX4SURBVGhD7ZhrTFtlGMfRqB80UbMYNX7RxGR+ccaoc980
+        8etMjB+WzI1dBNYNKHS9Ugr1tJzegG5cBEZp7YWW3gstpdy3srlNFpxzwgjbYAOmUccumdmWbTqO54nv
+        WQp7C21PYZ3ZL/knnLfP+zzPv5ye931P1hOWINda+p7Qp7soC1ZNxQrGdpnL16GwzKfYRRo9Y0Gqf/rg
+        ArlHgxTfRR5AYZkP36MaX2wC1Dc9SPG9mlEUltl8ZRC8QvTUX8YZASkitXMcQ8lLKDxzKXQqihoPm+dx
+        JkB1h4zzPI8qB4VnLnyv+nDvxUGsCVD3VD8l8KoHUHjmIQnqNosD2jP6qOkWzkCsiN7m25J23agsXPUl
+        mr46bLeK3t7kJZ5DlwvguYi3hAH1mDJa80/X+V5s4ziFz/dQ1Qeb70vatafFwco3ULoFQE2ojS7ZsdlY
+        +prIr55TdutvwVog7ajql3XuK8718NeI/FX5RLD6cjIGFit0rodShGqvlnfq83KN/DVirzZP6NeG6Trj
+        ylDd1b1e4hr0gNpJnWJPRWfHRNeDwvBNfjfioojBpjv10Ya7sU2lKngsk2HTPWLwwB3LiJuK/WJ8YyGK
+        6yIjqJ3U2NNKvKvurZ+LLfooRD+yr+dZZO+jtpKH6yaHI5N92OSrqU769it2K0dQW8mRb5dv1EVbbuAS
+        PwrpDzXd3O2Qf4HaS5w8m2y/8UTbJVzSRBQYD1P7B4zXiK6aWdD+AdM1GMPFJqLaqOnPXdayGtRe4hAE
+        8fTXllKrYaR1Fpc4nuCHWtau+7XAobBvN0o+zm4VvgCCvwudSgd8luxTruGH1qs5tnIn9ITaS45kzcC9
+        zHOT5/Js0rUoxUPkmMrfgRiIxeVYrJao4wbHJvekbIIhGTOigHZ6i0n4JpoaF4gR+MkZXI5Y0SZu7W6T
+        B1ibYIBEBXbiJ1wxRg1DxrscOyFDU5Zlj0Ne3jBkWnIdyrcTk2kzwcB3VZzCFWMka9fPbLUXvYjClwW2
+        8mX0HFwuRitydhF5taO4YoyEXtXPKDRh+H7NaVwuRvyA5hwKTR/0fusXXDFGe32qH1FowtDb+ZO4XIx4
+        bvU0Ck0fQn/lCVwxRgK/ZgKFJgaV9ZQkoJnA5WK016m6gKLTB89LDuGKMao+aLiSY5J9hMKXZadZur76
+        kOEKLhcjrpsYR+HpYaddul7QXrnkDxPWBa5T8T2asiz5TuIo7KRxuRjx28iZrWbxB2gKO8CExKeb7bkw
+        gC0Wq0Z6b7bHrqhEU+OS7yCqvj1m+wuXI1aRyX76v0JOsTaTjAlGdUcOXC9oU4Sym4SvojQPgAMSvR51
+        QgxuLk6szaRigpF5uG2+LKyf4boqhgsdCg8I/oYxy7Az7huWeGJlhtNa1mg63sH6BBimN4gg3GfJyH7K
+        TxU6v7Gg9hJnh4X3srhdt+QiuJoS+bR/wJketZccHGt5SctJ9yM/XJmizvs8d4UWtZU8HAPnWfrePtV/
+        8eHk3VN9VITW4vFUBbkg5+JxeNlX5FHNQi+ordTItUg3wemsfaKLqj9mmZOH9RMCF3mcfjK1FXvII56x
+        wM3FxZMVvLkX+zSTIr+mWxbQnanoqZ/bN9A8H5yIUHXRhrtFnor0vGLdZZfbdrfKq7JbSj6D0x4a/m97
+        71JqdIPNs/AqFNfkUoI5il7DbWFA6/6UIJ5Baek7gXie61RuFPo0tiI3GULDK88Oq/TDQofymKqv5vfQ
+        2W5s07GCGKKz+p7AR54X+yo/R2kyh20t0rUiv2rJAxiI71Zdor/tDWha+thhEb0Oj1t0yYoil1IfPBvB
+        GgB10Pe90K91oHBWQM/QO7rMytpulAxtM4oV6JIVO82SdfojLXF3tepu870CB/EJCmcF9Ay9o8v0GgFk
+        QX3chbTEp/otXefwFTcCL75xezRYK+hz+FEUxpoVN5JrLc3WdTT93XTUSsVK099IFXtUXBTGmhU3AmsN
+        fcbfIu7QbFugYOXW2HWILStuZLV4YiTTeGIk08AaYcw8TmL6RjbAmaSWGXzcBL0jG/8HsrL+BSjODvBr
+        zYShAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="flashtwrp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
