--- a/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
@@ -3417,33 +3417,33 @@
   <data name="TaskBarDropdownMiFix.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX4SURBVGhD7ZhrTFtlGMfRqB80UbMYNX7RxGR+ccaoc980
-        8etMjB+WzI1dBNYNKHS9Ugr1tJzegG5cBEZp7YWW3gstpdy3srlNFpxzwgjbYAOmUccumdmWbTqO54nv
-        WQp7C21PYZ3ZL/knnLfP+zzPv5ye931P1hOWINda+p7Qp7soC1ZNxQrGdpnL16GwzKfYRRo9Y0Gqf/rg
-        ArlHgxTfRR5AYZkP36MaX2wC1Dc9SPG9mlEUltl8ZRC8QvTUX8YZASkitXMcQ8lLKDxzKXQqihoPm+dx
-        JkB1h4zzPI8qB4VnLnyv+nDvxUGsCVD3VD8l8KoHUHjmIQnqNosD2jP6qOkWzkCsiN7m25J23agsXPUl
-        mr46bLeK3t7kJZ5DlwvguYi3hAH1mDJa80/X+V5s4ziFz/dQ1Qeb70vatafFwco3ULoFQE2ojS7ZsdlY
-        +prIr55TdutvwVog7ajql3XuK8718NeI/FX5RLD6cjIGFit0rodShGqvlnfq83KN/DVirzZP6NeG6Trj
-        ylDd1b1e4hr0gNpJnWJPRWfHRNeDwvBNfjfioojBpjv10Ya7sU2lKngsk2HTPWLwwB3LiJuK/WJ8YyGK
-        6yIjqJ3U2NNKvKvurZ+LLfooRD+yr+dZZO+jtpKH6yaHI5N92OSrqU769it2K0dQW8mRb5dv1EVbbuAS
-        PwrpDzXd3O2Qf4HaS5w8m2y/8UTbJVzSRBQYD1P7B4zXiK6aWdD+AdM1GMPFJqLaqOnPXdayGtRe4hAE
-        8fTXllKrYaR1Fpc4nuCHWtau+7XAobBvN0o+zm4VvgCCvwudSgd8luxTruGH1qs5tnIn9ITaS45kzcC9
-        zHOT5/Js0rUoxUPkmMrfgRiIxeVYrJao4wbHJvekbIIhGTOigHZ6i0n4JpoaF4gR+MkZXI5Y0SZu7W6T
-        B1ibYIBEBXbiJ1wxRg1DxrscOyFDU5Zlj0Ne3jBkWnIdyrcTk2kzwcB3VZzCFWMka9fPbLUXvYjClwW2
-        8mX0HFwuRitydhF5taO4YoyEXtXPKDRh+H7NaVwuRvyA5hwKTR/0fusXXDFGe32qH1FowtDb+ZO4XIx4
-        bvU0Ck0fQn/lCVwxRgK/ZgKFJgaV9ZQkoJnA5WK016m6gKLTB89LDuGKMao+aLiSY5J9hMKXZadZur76
-        kOEKLhcjrpsYR+HpYaddul7QXrnkDxPWBa5T8T2asiz5TuIo7KRxuRjx28iZrWbxB2gKO8CExKeb7bkw
-        gC0Wq0Z6b7bHrqhEU+OS7yCqvj1m+wuXI1aRyX76v0JOsTaTjAlGdUcOXC9oU4Sym4SvojQPgAMSvR51
-        QgxuLk6szaRigpF5uG2+LKyf4boqhgsdCg8I/oYxy7Az7huWeGJlhtNa1mg63sH6BBimN4gg3GfJyH7K
-        TxU6v7Gg9hJnh4X3srhdt+QiuJoS+bR/wJketZccHGt5SctJ9yM/XJmizvs8d4UWtZU8HAPnWfrePtV/
-        8eHk3VN9VITW4vFUBbkg5+JxeNlX5FHNQi+ordTItUg3wemsfaKLqj9mmZOH9RMCF3mcfjK1FXvII56x
-        wM3FxZMVvLkX+zSTIr+mWxbQnanoqZ/bN9A8H5yIUHXRhrtFnor0vGLdZZfbdrfKq7JbSj6D0x4a/m97
-        71JqdIPNs/AqFNfkUoI5il7DbWFA6/6UIJ5Baek7gXie61RuFPo0tiI3GULDK88Oq/TDQofymKqv5vfQ
-        2W5s07GCGKKz+p7AR54X+yo/R2kyh20t0rUiv2rJAxiI71Zdor/tDWha+thhEb0Oj1t0yYoil1IfPBvB
-        GgB10Pe90K91oHBWQM/QO7rMytpulAxtM4oV6JIVO82SdfojLXF3tepu870CB/EJCmcF9Ay9o8v0GgFk
-        QX3chbTEp/otXefwFTcCL75xezRYK+hz+FEUxpoVN5JrLc3WdTT93XTUSsVK099IFXtUXBTGmhU3AmsN
-        fcbfIu7QbFugYOXW2HWILStuZLV4YiTTeGIk08AaYcw8TmL6RjbAmaSWGXzcBL0jG/8HsrL+BSjODvBr
-        zYShAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX3SURBVGhD7ZhrTFtlGMfRqB80UbMYNX7RxGR+ccao02+a
+        +HUmxg9L5sYuAusGFEqvlEI9vdEWqIwhg/Uy2tLSe0svlEuBdc7htuCcE0bYBhswjTp2ycy2bNNxPE98
+        z1LYW2h7CuvMfsk/4bx93ud5/uX0vO978h6zBIWWqnf4Xu0FSbB+KlEwtrO9Zh0Ky33KnUqjeyxIxqaH
+        Fsg1GiS5TmUbCst9uG7V+GIToP7pQZLrUY+isNzmSz3vJaK3+RLOCEgWbZpj6StfQOG5S6lDVtZy6MA8
+        zgSoacgwz3GrClB47sL11H7Xd2EQawLUMxUjeZ7aARSee4iC2k1Cv+a0Lm66iTOQKKJv/y1RQDsqidR/
+        gaavDtssgjc3eohn0OUCOE7iDb6/dkwWb/yn+1wftnGcIud6yYah/fdEAc0pYbDuNZRuAVATaqNLZmwy
+        Vr0i8NXOyXt0N2EtEHfVxyThb8oL3dw1Al99MRFsuJSOgcUKne0lZaGmKzVhXVGhkbtG6NEU8X2aCFVn
+        XB7ae6XCQ1yFHlA7mVPuVoS7JrrvF4Zv8sCIkyQGW283x1vuJDaVqeCxrAib7hKDbbfNIy4y8YvxjoVI
+        tlMZRe1kxu4O4u3avua5xKIPQ9Qj+1qRWfIuait92C7lsehkPzb5aipM3X7lLvkIais9im3SDdq44Tou
+        8cOQ7mDrjV126eeovdQpskoajcc7L+KSpiL/eIRsHDBeJbr3zIIaB0xXYQwXm4qa4qY/d1qq96D2Uocg
+        iCe/MldZ9CMds7jEyQQ/1OqA9tcSu8y2zSj6ML+D/xwI/i51yO3wWbpPuZajHVcKrDUO6Am1lx7pmoF7
+        meNSni2yiteiFA9QYKp5C2IgFpdjsQxx+3WWVerO2ARNOmYEfs30ZhP/dTQ1KRDD8ylncDkSRZm4uatT
+        6mdsggYSldiIn3DFaLXEDXdYNkKCpizLbru0piVuXHIdKrYRk1kzQcN1Kk7iitGSBHQzW2xlz6PwZYGt
+        fDU1B5eL1oqcXQQezSiuGC2+R/UzCk0Zrk99CpeLFtevPotCswe13/oFV4xWhVf1IwpNGWo7fwKXixbH
+        VTuNQrMH31d3HFeMFs+nnkChqUHmPSHyqydwuWhVOFTnUXT24HiUh3DFaDUM6S8XmCQfoPBl2dEuXt9w
+        UH8Zl4sW20WMo/DssMMmXs8L1C35w4R1ge2QfY+mLEuxgzgCO2lcLlrcTuXMlnbhe2gKM8CEyKud7T0/
+        gC2WqH3U3my3TVaHpial2E7Ufzts/QuXI1HRyRj1X1FOMTaTjglaew+3XSvplIXyW/kvozT3gQMStR6F
+        IQY3FyfGZjIxQevAUft8dUQ3w3YqjpXaZW4Q/A1j7Uc7k75hSSZGZlgd1fuMw12MT4ARaoMIwn2Wjmwn
+        fWSp42szai91tps5LwoD2iUXwdWUwKv5A870qL30YFlqKg0nXA/9cGWKO+5xXAoNait9WHrW09S9fTJ2
+        4cHkPVP9ZJTS4vFMBbkg5+JxeNlX5lbNQi+orcwoNIs3wuksMNFNNg+b56QR3QTPqfyBejJ1lruVh91j
+        /huLi6creHMv9KonBT51j8SvPa3obZ7TxdrmgxNRcm+85U6ZW5GdV6w7bVLrrg5pfb6h8lM47aHh/7b3
+        TrlaO7h/Fl6F4ppcSjCH6NPf4vs1rk8I4imUlroTiGfZDvkGvldtLXMpQ2h45dluEb9fapcPq/r3/B46
+        04NtOlEQQ4Tr7/K8ynNCb91nKE3usNUgXivwqZY8gIG4LtVF6tv+CE3LHtvNglfhcYsuGVHmlOuCZ6JY
+        A6Au6r7n+zR2FM4I6Bl6R5d5eduMokNbjUIZumTEjnbROt1hQ9JdrSrafrfETnyMwhkBPUPv6DK7RgBJ
+        UJd0Ia30qn7L1jl8xY3Ai2/cHg3WCuocfgSFMWbFjRRaqvK1gda/W49YyESpY/vIcreKjcIYs+JGYK2h
+        zvibhV3qrQsUrNuSuA4xZcWNrBaPjeQaj43kGlgjtJlHSXTfyAY4EzXRg4+aoHdk4/9AXt6/jBEO0ktD
+        rp8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="flashtwrp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
