--- a/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
@@ -3417,33 +3417,33 @@
   <data name="TaskBarDropdownMiFix.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX3SURBVGhD7ZhrTFtlGMfRqB80UbMYNX7RxGR+ccao02+a
-        +HUmxg9L5sYuAusGFEqvlEI9vdEWqIwhg/Uy2tLSe0svlEuBdc7htuCcE0bYBhswjTp2ycy2bNNxPE98
-        z1LYW2h7CuvMfsk/4bx93ud5/uX0vO978h6zBIWWqnf4Xu0FSbB+KlEwtrO9Zh0Ky33KnUqjeyxIxqaH
-        Fsg1GiS5TmUbCst9uG7V+GIToP7pQZLrUY+isNzmSz3vJaK3+RLOCEgWbZpj6StfQOG5S6lDVtZy6MA8
-        zgSoacgwz3GrClB47sL11H7Xd2EQawLUMxUjeZ7aARSee4iC2k1Cv+a0Lm66iTOQKKJv/y1RQDsqidR/
-        gaavDtssgjc3eohn0OUCOE7iDb6/dkwWb/yn+1wftnGcIud6yYah/fdEAc0pYbDuNZRuAVATaqNLZmwy
-        Vr0i8NXOyXt0N2EtEHfVxyThb8oL3dw1Al99MRFsuJSOgcUKne0lZaGmKzVhXVGhkbtG6NEU8X2aCFVn
-        XB7ae6XCQ1yFHlA7mVPuVoS7JrrvF4Zv8sCIkyQGW283x1vuJDaVqeCxrAib7hKDbbfNIy4y8YvxjoVI
-        tlMZRe1kxu4O4u3avua5xKIPQ9Qj+1qRWfIuait92C7lsehkPzb5aipM3X7lLvkIais9im3SDdq44Tou
-        8cOQ7mDrjV126eeovdQpskoajcc7L+KSpiL/eIRsHDBeJbr3zIIaB0xXYQwXm4qa4qY/d1qq96D2Uocg
-        iCe/MldZ9CMds7jEyQQ/1OqA9tcSu8y2zSj6ML+D/xwI/i51yO3wWbpPuZajHVcKrDUO6Am1lx7pmoF7
-        meNSni2yiteiFA9QYKp5C2IgFpdjsQxx+3WWVerO2ARNOmYEfs30ZhP/dTQ1KRDD8ylncDkSRZm4uatT
-        6mdsggYSldiIn3DFaLXEDXdYNkKCpizLbru0piVuXHIdKrYRk1kzQcN1Kk7iitGSBHQzW2xlz6PwZYGt
-        fDU1B5eL1oqcXQQezSiuGC2+R/UzCk0Zrk99CpeLFtevPotCswe13/oFV4xWhVf1IwpNGWo7fwKXixbH
-        VTuNQrMH31d3HFeMFs+nnkChqUHmPSHyqydwuWhVOFTnUXT24HiUh3DFaDUM6S8XmCQfoPBl2dEuXt9w
-        UH8Zl4sW20WMo/DssMMmXs8L1C35w4R1ge2QfY+mLEuxgzgCO2lcLlrcTuXMlnbhe2gKM8CEyKud7T0/
-        gC2WqH3U3my3TVaHpial2E7Ufzts/QuXI1HRyRj1X1FOMTaTjglaew+3XSvplIXyW/kvozT3gQMStR6F
-        IQY3FyfGZjIxQevAUft8dUQ3w3YqjpXaZW4Q/A1j7Uc7k75hSSZGZlgd1fuMw12MT4ARaoMIwn2Wjmwn
-        fWSp42szai91tps5LwoD2iUXwdWUwKv5A870qL30YFlqKg0nXA/9cGWKO+5xXAoNait9WHrW09S9fTJ2
-        4cHkPVP9ZJTS4vFMBbkg5+JxeNlX5lbNQi+orcwoNIs3wuksMNFNNg+b56QR3QTPqfyBejJ1lruVh91j
-        /huLi6creHMv9KonBT51j8SvPa3obZ7TxdrmgxNRcm+85U6ZW5GdV6w7bVLrrg5pfb6h8lM47aHh/7b3
-        TrlaO7h/Fl6F4ppcSjCH6NPf4vs1rk8I4imUlroTiGfZDvkGvldtLXMpQ2h45dluEb9fapcPq/r3/B46
-        04NtOlEQQ4Tr7/K8ynNCb91nKE3usNUgXivwqZY8gIG4LtVF6tv+CE3LHtvNglfhcYsuGVHmlOuCZ6JY
-        A6Au6r7n+zR2FM4I6Bl6R5d5eduMokNbjUIZumTEjnbROt1hQ9JdrSrafrfETnyMwhkBPUPv6DK7RgBJ
-        UJd0Ia30qn7L1jl8xY3Ai2/cHg3WCuocfgSFMWbFjRRaqvK1gda/W49YyESpY/vIcreKjcIYs+JGYK2h
-        zvibhV3qrQsUrNuSuA4xZcWNrBaPjeQaj43kGlgjtJlHSXTfyAY4EzXRg4+aoHdk4/9AXt6/jBEO0ktD
-        rp8AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX3SURBVGhD7ZhrbFNlGMenUT9oooYYNX7RxAS/iDEq+k0T
+        v2Ji/ECCMC5uo7CtW+l1Xbd62p2ul62wMcagF9Z27Xpv18u6OxRxIGQi4sYyYINtaFTGJRgggLLjeeJ7
+        SDfebm1PN4rhl/yTnbfP+zzPvzs97/uevCcsQKG18j2hT3tRFqqbSBSMbW2tXoXCcp9yF2nyjISovsmD
+        c+QeDlF8F7kPheU+fI9qdL4JUO/kAMX3qodRWG7ztUHwCtHddBlnBKSINc5wDBUvofDcpdSpKNsTN8/i
+        TIAaBgyzPI+qAIXnLnxv7Xc9FwewJkBdE32UwFvbj8JzD0lIu04c0JzRx823cAYSRfTsvy0Jaodl0bqv
+        0PTlYZNV9PZaL/EcupwDz0W8JQzUjhDxnf90nu/BNo5T9Hw3VX9w/31JUHNaHNK9gdLNAWpCbXTJjnWm
+        ytdE/toZZZf+FqwF0o66PllkZ3mhh79C5K8rJkL1l9MxMF/hc92UItx4tTqiLyo08VeIvZoioV8TpeuM
+        KsO7r+7wEtegB9RO5pR7aiIdY50PCsM3eWDIRREDLXea4s13E5vKVPBYVkbM94iBfXcsQ24q8YvxjYQp
+        rouMoXYyY3sb8W5tT9NMYtFHIfqRfb3IInsftZU+XDd5PDbei02+nIrQt1+5WzmE2kqPYrt8jTZuvIFL
+        /CikP9Ryc5tD/iVqL3WKbLJdphPtl3BJU1FgNErt6jddIzobpkG7+s3XYAwXm4oa4+Y/t1qrGlB7qUMQ
+        xNPfWCqthqG2aVziZIIfalVQ+2uJQ2HfZJJ8nN8mfAEEf5c6lQ74LN2nXPMPbVcLbNVO6Am1lx7pmoF7
+        mecmzxXZpCtRiocoMFe/AzEQi8sxX8a44wbHJvdkbIIhHTOigGZyvVn4JpqaFIgR+MkpXI5E0SZubWuX
+        B1ibYIBEJXbiJ1wxRs1xw12OnZChKYuy3SGvbo4bF1yHiu3EeNZMMPBdNadwxRjJgvqpDfayF1H4osBW
+        voqeg8vFaEnOLiKvZhhXjJHQq/oZhaYM368+jcvFiB9Qn0Oh2YPeb/2CK8Zoh0/1IwpNGXo7fxKXixHP
+        XTuJQrOH0K87gSvGSOBXj6HQ1KDynpIE1GO4XIx2OFUXUHT24HnJw7hijOoPGq4UmGUfofBF2dIqXV1/
+        yHAFl4sR102MovDssMUuXS0I6hb8YcK6wHUqvkdTFqXYSQzCThqXixG/nZza0Cr+AE1hB5iQ+LTT3Rf6
+        scUStZfem223K3RoalKKHUTdnqO2v3A5EhUb76P/K+QEazPpmGC0+8i+6yXtinB+i/BVlOYBcECi16MI
+        xODm4sTaTCYmGJmP2WerovoprqvmeKlD4QHB3zB24Jgj6RuWZGJlhtNWtdc42MH6BBilN4gg3GfpyH7K
+        T5U6v7Wg9lJns4X3sjioXXARXE6JfJo/4EyP2ksPjrW6wnjS/cgPV+a48z7PXaNBbaUPx8B5lr63T/Vd
+        fDh510QvFaM1fzxTQS7IOX8cXvaVeVTT0AtqKzMKLdK1cDoLjnVSTUctM/KofkzgIo/RT6b2cg95xDMS
+        uDm/eLqCN/din3pc5Fd3yQLaMzXdTTP1vS2zobEYtTvefLfMU5OdV6xb7XLbtjZ5Xb6x4nM47aHh/7b3
+        LqVaO7B/Gl6F4ppcSDCH6DHcFgY07s8I4hmUlr4TiOe5TuUaoU9tK3OTYTS89Gy2Sj8sdSiPqnobfg+f
+        7cI2nSiIISK6ewIfeV7s032B0uQOG43SlSK/asEDGIjvVl2iv+1P0LTssdkieh0et+iSFWUupT50NoY1
+        AOqg73uhX+NA4ayAnqF3dJmXt8kkObzRJFagS1ZsaZWs0h8xJt3Vkp2t90ocxKconBXQM/SOLrNrBJCF
+        9EkX0gqf6rdsncOX3Ai8+Mbt0WCtoM/hgyiMNUtupNBama8NtPzdMmilEqXu20uVe1RcFMaaJTcCaw19
+        xl8v7lBvnKOQbkPiOsSWJTeyXDwxkms8MZJrYI0wZh4nMX0jG+BM0sgMPm6C3pGN/wN5ef8CTJEOuFch
+        TmYAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="flashtwrp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
