--- a/RedmiNote7ToolC/RedmiNote7ToolC/MiStockDebloat.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/MiStockDebloat.resx
@@ -118,6 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="debloatrom.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAAAHFJREFUOE+tj9EOgCAIRfs1+P9/qV54pbF1nRqEWmxnMoQjbl6IiI5yj7RhF8yc
+        kgqO/Qz5X6CqhWWBFTymBETUkAr61TFU568CNI/iCuwlK2SEgroBuVcLBTN83sBOfLkIrDACBI8NvGYP
+        CEARrCN6AZv0xK/y4zxUAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAAAAACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAABMLAAATCwAAAAAAAAAA
