--- a/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/Visual.resx
@@ -3444,33 +3444,33 @@
   <data name="TaskBarDropdownMiFix.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX0SURBVGhD7ZhtbFNVGMenUT9oooYYNX7RxAS/iDEq+k0T
-        v2Ji/ECCMF7cRmFbt66v67rV2+72dSswxujoWtZ27frerS/r3qETQSETETeWARtsQ6MyXoIBgii73iee
-        S7pxurW93SiGX/JPdk+f8zzPv7u955yb95hFKLRVvSP06y7KQnWTiYKx7a01a1BY7lPuJs3e0RDVP3Vo
-        njwjIYrvJptRWO7D96rGFpoA9U0NUnyfZgSF5TZfmgQvET2Nl3FGQIpYwyzHVPkCCs9dSl2Ksl19xjmc
-        CZC+e98cz6sqQOG5C9+n/qb34iDWBKh7sp8S+NQDKDz3kIR0G8RB7RlD3HILZyBRRO+B25IO3YgsWvcF
-        mr4ybLGJ3lzvI55Bl/PguYk3hEH1KBHX/tN1vhfbOE7R8z1U/aED9yQd2tPikP41lG4eUBNqo0t2bDBX
-        vSIKqGeV3YZbsBZIO+v6ZZFd5YVe/ipRoK6YCNVfTsfAQoXP9VCKcMPVmoihqNDMXyX2aYuEAW2UrjOm
-        DO+9WuEjrkEPqJ3MKffWRjrHu+4Xhm/y4LCbIgaNdxrjTX8lNpWp4LFMRCx3icHmO9ZhD5X4xfhHwxTX
-        TcZQO5mxs414W93bOJtY9GGIfmRfL7LK3kVtpQ/XQx6PTfRhk6+kIvTtV+5RDqO20qPYIV+ni7fcwCV+
-        GDIcNt7c4ZR/jtpLnSK7bLf5RPslXNJUFByLUrsHzNeIrj0zoN0DlmswhotNRQ1xyx/bbdV7UHupQxDE
-        k19Zq2ym4bYZXOJkgh9qdYfulxKnwrHFLPkwv034HAj+LnUpnfBZuk+5pu/brhbYa1zQE2ovPdI1A/cy
-        z0OeK7JLV6MUD1BgqXkLYiAWl2OhWuLOGxy73JuxCYZ0zIiC2qmNFuHraGpSIEYQIKdxORJFm7i1o10e
-        ZG2CARKVOIgfccUYNdFrCsdByNCUJdnplNfAHFwuRsUOYiJrJhj47tpTuGKMZB2G6U2OsudR+JLAVr6a
-        noPLxWhZzi4in3YEV4yR0Kf6CYWmDD+gOY3LxYgf1JxDodmD3m/9jCvGqMKv+gGFpgy9nT+Jy8WI51FP
-        odDsIQzoT+CKMRIENOMoNDWovCckQc04LhejCpfqAorOHjwfOYQrxqj+kOlKgUX2AQpfkm2t0rX1h01X
-        cLkYcT3EGArPDtsc0rWCDv2iP0xYF7guxbdoypIUu4ijsJPG5WLEbyenN7WK30NT2AEmJH7dTM+FAWyx
-        RO2n92Y7HQo9mpqUYidRt++Y/U9cjkTFJvrp/wo5ydpMOiYY7T3SfL2kXRHONwpfRmnuAwckej2KQAxu
-        Lk6szWRigpFx6OBcddQwzXXXHi91Krwg+BvGmodak75hSSZWZjht1fub4p2sT4BReoMIwn2WjhynAlSp
-        62srai91tlp5L4o7dIsugispkV/7O5zpUXvpwbHVVLac9Dz0w5Ul7rrH89RqUVvpwzFxnqbv7VP9Fx9M
-        3j3ZR8VoLRzPVJALci4ch5d9ZV7VDPSC2sqMQqt0PZzOOsa7qMZj1ll51DAucJPf0U+m9nIvecQ7Gry5
-        sHi6gjf3Yr9mQhTQdMuCujO1PY2z6mjDXGg8Ru2ld8hl3trsvGLd7pDbd7TJ6/JbKj+F0x4a/m9771Zq
-        dIMHZuBVKK7JxQRziF7TbWFQ6/mEIJ5Caek7gXiW61KuE/o19jIPGUbDy89Wm/T9UqfymKpvz2/hs93Y
-        phMFMUSEvCvwk+fFfv1nKE3usLlFuloUUC16AAPxPapL9Lf9EZqWPbZaRa/C4xZdsqLMrTSEzsawBkCd
-        9H0vDGidKJwV0DP0ji7z8raYJUObzWIFumTFtlbJGsORlqS7WiLSerfESXyMwlkBPUPv6DK7RgBZyJB0
-        Ia30q37N1jl82Y3Ai2/cHg3WCvocfhSFsWbZjRTaqvJ1buPfxqM2KlGa/v1UuVfFRWGsWXYjsNbQZ/yN
-        4k7N5nkK6TclrkNsWXYjK8VjI7nGYyO5BtYIY+ZREtM3sgHOJA3M4KMm6B3Z+D+Ql/cvc8QOLtAk3kYA
-        AAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAXzSURBVGhD7ZhtbFNVGMenUT9oooYYNX7RxAS/iDEq+k0T
+        v2Ji/ECCMF7cRmFbt9LXdd3q6dvabqtszG3Qtazt2vW9XV/WvUMRQSETETeWARtsQ6MyXoIBgii73iee
+        S7pxurW93SiGX/JPdk+f8zzPv7u955yb94hFKLRWviX06S/IQnWTiYKx7e3Va3BY7lPuUps8oyFqYOrA
+        PLlHQhTfpd6Lw3IfvkczttAEqH9qiOJ7tSM4LLf53Ch4AfU2XSIZASlijbMcY8VzODx3KXUqygx9LXMk
+        EyB9rGmO59EU4PDche+t+abvwhDRBKhncoASeGsGcXjuIQnpN4gDutOGuPkmyUCiUN++W5KgfkQWrfsM
+        T18ZtlhFr6/3oqfw5Tx4LvSaMFAziuLaf7rP9REbJyl6rpeqP7DvriSoOyUO1b6C080DakJtfMmODabK
+        l0T+mlllj+EmrAXSrroBWeSr8kIPf5XIX1eMQvWX0jGwUOGzvZQi3HilOmIoKjTxV4m9uiKhXxel64wp
+        w3uu7PKiq9ADbidzyj2qSNd4973C8E3uH3ZRaKj1dlO8+a/EpjIVPJZRxHwHDe29bRl2U4lfjG80THFd
+        6hhuJzN2dqA3a/qaZhOLPgjRj+xrRRbZ27it9OG61cdiE/3E5CupCH37lbuVw7it9Ci2y9fp423XSYkf
+        hAwHW2/scMg/xe2lTpFNttt0vPMiKWkqCoxFqd2Dpquou2EGtHvQfBXGSLGpqDFu/mO7taoBt5c6CKHH
+        v7BUWo3DHTOkxMkEP9SqoP6XEofCvsUkeT+/Q/gMCP4udSod8Fm6T7nm7zuuFNiqndATbi890jUD9zLP
+        rT5bZJOuxinuo8Bc/QbEQCwpx0K1xR3XOTa5J2MTDOmYEQV0UxvNwlfx1KRAjMCvniblSBRt4uaOTnmA
+        tQkGSFRiRz+SijFqptcUjh3J8JQl2emQV8McUi5GxXY0kTUTDHyX6iSpGCNZ0DC9yV72LA5fEtjKV9Fz
+        SLkYLcvZReTVjZCKMRJ6NT/h0JTh+7WnSLkY8QPaszg0e9D7rZ9JxRjt8ml+wKEpQ2/nT5ByMeK5a6Zw
+        aPYQ+muPk4oxEvi14zg0Nai8xyQB7TgpF6NdTs15HJ09eF71IVIxRvUHjJcLzLL3cPiSbGuXrq0/aLxM
+        ysWI60ZjODw7bLNL1wqCtYv+MGFd4DoV3+IpS1LsREdgJ03KxYjfqZ7e1C5+B09hB5iQ+PQzvecHicUS
+        1ULvzXbaFbV4alKKHaju66O2P0k5EhWbGKD/K+pJ1mbSMcFoz+G910o6FeH8VuGLOM094IBEr0cRiCHN
+        JYm1mUxMMGqJm+eqooZprkt1rNSh8IDgbxhrje9P+oYlmViZ4XRUtTTHu1ifAKP0BhFE+iwd2U/6qVLn
+        lxbcXupstfCeFwf1iy6CKymRT/c7nOlxe+nBsVZXtJ1wP/DDlTnuvMtzq3S4rfThGDlP0vf2yYEL9yfv
+        meynYrQWjmcqyAU5F47Dy74yj2YGesFtZUahRboeTmfB8W6q6ahlVh41jAtc6u/oJ1NnuUd92DMauLGw
+        eLqCN/din3ZC5Nf2yAL606repllNpGEuNB6j9tA75DKPKjuvWLfb5bYdHfK6/LaKj+G0h4f/2967lFr9
+        0L4ZeBVKanIxwRzUZ7wlDOjcHyH0BE5L3wnoaa5TuU7o09rK3OowHl5+tlql75Y6lEc1/Q2/hc/0EJtO
+        FMSgiOqOwKc+J/bVfoLT5A6b26SrRX7NogcwEN+tuUh/2x/gadljq0X0Mjxu8SUrylxKQ+hMjGgA1EXf
+        90K/zoHDWQE9Q+/4Mi9vi0lyaLNJrMCXrNjWLlljONyWdFeLIu13ShzoQxzOCugZeseX2TUCyEKGpAtp
+        hU/za7bO4ctuBF58k/ZosFbQ5/AjOIw1y26k0FqZr3e2/t16xEolSjvQQpV7NFwcxpplNwJrDX3G3yju
+        0m6ep1DtpsR1iC3LbmSleGQk13hkJNcgGmHMPExi+sY2wJmkkRl82AS9Yxv/B/Ly/gXbIg4chdbAPgAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="flashtwrp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
