--- a/RedmiNote7ToolC/RedmiNote7ToolC/Properties/Resources.resx
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Res_en" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\res.en.resx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Res_es" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\res.es.resx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
